tp 1 ultima actualizacion

--- a/proyecto.html
+++ b/proyecto.html
@@ -76,40 +76,33 @@
 
     <section class="container">
       <h2>Galería de tarjetas</h2>
-      <div class="grid grid-3">
+      <div class="grid grid-3 galeria">
         <article class="card">
-          <img class="card-img" src="assets/smartwatch.png" width="64" height="64" alt="Descripción breve de la imagen 1.">
+          <img class="card-img" src="assets/smartwatch.png" width="64" height="64" alt="Icono de un smartwatch.">
           <div class="card-body">
             <h3>Integración con smartwatch</h3>
             <p>Sincronizá tu tiempo y hábitos directamente con tu reloj inteligente y apps de fitness.</p>
           </div>
         </article>
         <article class="card">
-          <img class="card-img" src="assets/insignias.png" width="64" height="64" alt="Descripción breve de la imagen 2.">
+          <img class="card-img" src="assets/insignias.png" width="64" height="64" alt="Icono de una medalla.">
           <div class="card-body">
             <h3>Gamificación y logros</h3>
             <p>Desafíos, insignias y recompensas para motivarte a mantener hábitos saludables.</p>
           </div>
         </article>
         <article class="card">
-          <img class="card-img" src="assets/progreso.png" width="64" height="64" alt="Descripción breve de la imagen 3.">
+          <img class="card-img" src="assets/progreso.png" width="64" height="64" alt="Icono de progreso.">
           <div class="card-body">
             <h3>Comparaciones históricas</h3>
             <p>Reportes avanzados que te muestran tu progreso mes a mes para detectar mejoras.</p>
           </div>
         </article>
         <article class="card">
-          <img class="card-img" src="assets/amigos.png" width="64" height="64" alt="Descripción breve de la imagen 3.">
+          <img class="card-img" src="assets/amigos.png" width="64" height="64" alt="Icono de grupo de personas.">
           <div class="card-body">
             <h3>Modo desafío con amigos</h3>
             <p>Competí o colaborá con tu comunidad para lograr objetivos digitales en conjunto.</p>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card-img" src="assets/alertas.png" width="64" height="64" alt="Descripción breve de la imagen 3.">
-          <div class="card-body">
-            <h3>Alertas inteligentes</h3>
-            <p>Recomendaciones automáticas basadas en tus patrones de uso, para ayudarte a mejorar sin esfuerzo.</p>
           </div>
         </article>
       </div>
